Flume 0.9.4
===========

Old Thrift sinks have been removed and are no longer available.
These are 'tacksink' and 'trawsink'. Additionally, the old aliases
'tsink' and 'tsource' are no longer present. Use the full names
'thriftSink' and 'thriftSource' instead.

Flume 0.9.3
===========

There have been some changes that removed advanced and purposely
undocumented sinks such as the 'let' sink and the 'failchain' sink.
Additions to the language include a new syntax for decorators,
python-style keyword arguments, and a new 'collector' syntax that
allows for multiple collector destinations.

Flume 0.9.2
===========

Multiple masters does not work in conjunction with automatic failover
chains configurations.

This version significantly reduces the chances of data duplication
encountered due to the FLUME-252 (races in tail) bug.  However, it
does not completely fix the problem.  A workaround is to use
'exec("tail -F <file>")' instead of the tail source Linux/Unix
systems.  A new issue has been filed as FLUME-320 to continue tracking
this problem.

Flume 0.9.2 is *not backwards compatible* with <0.9.2 installations
due to FLUME-216 - this release changes how configurations and node
maps are persisted to ZooKeeper and 0.9.2 masters cannot read
configurations or node maps written by masters from <0.9.2
installations. There is no upgrade path yet to preserve both node maps
and configurations, but one is planned for the 0.9.2 release.

The bug that caused FLUME-286 has been fixed for Thrift RPCs but not
for Avro-based RPC mechanisms.  Previous to the fix, the Thrift
version would not recover when a downstream RPC server had a network
partion such as a wire cut or power down.  Unlike killing a server,
these situations provided no failure feedback.  The Avro version
currently does not properly detect or recover from these situations so
the DFO mode can lose data.  This is reported as issue FLUME-313.

Flume 0.9.1 Update 1 (CDH3b3) Release Notes